--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,23 +1,29 @@
-name: Build Cleanup Job
+name: Build Gardener Syncer Job
 
 on:
   push:
     branches:
       - main
+    tags:
+      - "[0-9]+.[0-9]+.[0-9]+"
+      - "[0-9]+.[0-9]+.[0-9]+-*"
     paths-ignore:
+      - .reuse
       - "**/*.md"
+      - .gitignore
       - "CODEOWNERS"
       - "LICENSE"
-      - "OWNERS"
-      - "OWNER_ALIASES"
+      - "LICENSES/"
+
   pull_request_target:
-    types: [opened, synchronize]
+    types: [opened, synchronize, reopened]
     paths-ignore:
+      - .reuse
+      - .gitignore
       - "**/*.md"
       - "CODEOWNERS"
       - "LICENSE"
-      - "OWNERS"
-      - "OWNER_ALIASES"
+      - "LICENSES/"
 
 permissions:
   id-token: write # This is required for requesting the JWT token
@@ -29,6 +35,7 @@ jobs:
       contents: read
     runs-on: ubuntu-latest
     outputs:
+      tag: ${{ steps.tag.outputs.tag }}
       latest: ${{ steps.latest.outputs.latest || '' }}
     steps:
       - name: Checkout code
@@ -46,9 +53,9 @@ jobs:
     with:
       name: gardener-syncer
       dockerfile: Dockerfile
-      context: ./
-      export-tags: false
+      context: .
       tags: |
+        ${{ needs.setup.outputs.tag }}
         ${{ needs.setup.outputs.latest }}
 
   summary:
