--- a/sec-scanners-config.yaml
+++ b/sec-scanners-config.yaml
@@ -1,7 +1,7 @@
 module-name: kim-snatch
 kind: kyma
 bdba:
-  - europe-docker.pkg.dev/kyma-project/prod/gardener-syncer:0.2.0
+  - europe-docker.pkg.dev/kyma-project/prod/gardener-syncer:latest
 mend:
   language: golang-mod
   exclude:
